Adding Get and post methods
